# prismifold

./: .gitignore  README.md  generate_colormap.py  index.html  package-lock.json  package.json  vite.config.ts
app/: index.html
e2e/: app-shell.spec.ts  channels-display.spec.ts  embed-page.spec.ts  embed.spec.ts  navigation.spec.ts  project-page.spec.ts  settings-layout.spec.ts  stokes.spec.ts  thumbnails.spec.ts
embed/: index.html
public/: sitemap.xml
scripts/: build-windows-thumbnail-provider.mjs  capture-project-page-screenshots.mjs  capture-thumbnail.mjs  stage-desktop-assets.mjs  stage-vscode-assets.mjs  verify-desktop-assets.mjs  verify-vscode-assets.mjs
src/: async-resource.ts  channel-recognition-name-rules.ts  channel-recognition-settings.ts  channel-recognition.ts  channel-thumbnail-keys.ts  channel-view-items.ts  color.ts  colormap-range.ts  colormaps.ts  depth.ts  display-cache.ts  display-model.ts  display-selection.ts  display-texture.ts  embed-page.ts  exr-runtime.ts  exr-worker-client.ts  image-load-workers.ts  interaction-coordinator.ts  invalid-value-warning-settings.ts  main.ts  mueller.ts  probe.ts  project-page.css  project-page.ts  renderer.ts  (+17 more)
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: desktop_error.rs  desktop_io.rs  desktop_window_state.rs  lib.rs  main.rs
src-tauri/thumbnail-provider/: Cargo.toml
src-tauri/thumbnail-provider/src/: windows_shell.rs
src-tauri/windows/: exr-thumbnail-provider.nsh  exr-thumbnail-provider.wxs
(+182 files in other folders)
