[package]
name = "plenoview-desktop"
version = "0.2.0"
description = "Standalone desktop shell for Plenoview"
authors = ["Ryota Maeda"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "plenoview_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tauri = { version = "2.11.2", features = ["image-png"] }
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-single-instance = "2.4.2"
tempfile = "3.23.0"
thiserror = "2.0.17"
