[package]
name = "plenoview-exr-thumbnail"
version = "0.2.0"
description = "Windows Explorer thumbnail provider for Plenoview OpenEXR files"
authors = ["Ryota Maeda"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "plenoview_exr_thumbnail"
crate-type = ["cdylib", "rlib"]

[dependencies]
exr = { version = "1.74.0", default-features = false }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58.0", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_System_Com",
  "Win32_UI_Shell",
  "Win32_UI_Shell_PropertiesSystem",
  "implement"
] }
windows-core = "0.58.0"
